# telegram-bot

./: .gitignore  .gitlab-ci.yaml  .gitlab-ci.yml  Dockerfile  compose.yaml  docker_compose.yaml  main.py  pyproject.toml  requirements.txt
app/admin/: auth.py  main.py  views.py
app/core/orders/: constants.py  models.py  repositories.py  services.py
app/core/users/: constants.py  models.py  repositories.py  services.py
app/hendlers/: __init__.py  commands.py  filters.py  helpers.py
app/infra/: base.py
app/infra/postgres/: db.py
app/jobs/: sync_role.py
settings/: config.py
settings/.envs/: .env
